assets/scss/responsive/_medium.scss
// Medium devices (tablets, less than 992px)
@media (max-width: 992px) {
	//Form container
	.mto-form-container {
		width: 70%;
	}

	.mto-cstudy {
		&--body--pstatus {
			display: none;
		}
	}

	.mto-course,
	.mto-mycourses--card {
		// flex-basis: calc((100% / 2) - 30px);
	}

	// Course list page responsive
	.columns-4,
	.columns-3,
	.columns-2 {

		.col {
			flex: 0 0 50%;
			max-width: 50%;
			padding: 15px;
			width: 50%;
		}

		.mto-course-item {
			flex-basis: 335px;
		}
	}

	.columns-1 {
		gap: 14px;

		.mto-course-item {
			flex-basis: 100%;
		}
	}

	// Related Post
	.mto-related-post {
		.mto-single-course-item {
			flex-direction: column;
		}
	}

	.mto-single-course--main {
		width: 100%;
	}
}

